# FacePortraitV2-NCNN

./: LICENSE  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/phucynwa/faceportraitv2ncnn/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/phucynwa/faceportraitv2ncnn/: FacePortraitV2Converter.kt  IFacePortraitV2Converter.kt  MainActivity.kt
app/src/main/java/com/phucynwa/faceportraitv2ncnn/ui/component/: FacePortraitV2Screen.kt
app/src/main/java/com/phucynwa/faceportraitv2ncnn/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/phucynwa/faceportraitv2ncnn/util/: Utils.kt
app/src/main/jni/: CMakeLists.txt  faceportraitv2_jni.cpp
app/src/main/jni/opencv-mobile-4.8.0-android/sdk/native/jni/abi-arm64-v8a/: OpenCVModules.cmake
app/src/main/jni/opencv-mobile-4.8.0-android/sdk/native/jni/abi-armeabi-v7a/: OpenCVModules.cmake
app/src/main/jni/opencv-mobile-4.8.0-android/sdk/native/jni/abi-x86/: OpenCVModules.cmake
app/src/main/jni/opencv-mobile-4.8.0-android/sdk/native/jni/abi-x86_64/: OpenCVConfig.cmake  OpenCVModules.cmake
app/src/main/jni/opencv-mobile-4.8.0-android/sdk/native/jni/include/opencv2/: cvconfig.h
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/phucynwa/faceportraitv2ncnn/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
